Partitioned cookies + bug when checking the forced cookies option for the demo.